--- a/index.html
+++ b/index.html
@@ -33,7 +33,138 @@
       <h2>65% OFF</h2>
       <p>OUR HOLIDAY DEALS ARE BETTER</p>
       <h3>ALL CATEGORIES</h3>
-      <img src="./resources/New Year Photo.png"
+      <img src="./resources/New Year Photo.png" />
     </section>
+
+    <!-- Group 100  -->
+    <section class="grp100">
+      <div class="grp100-content">
+        <h2>Welcome to midnight party</h2>
+        <p>
+          Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+          molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+          euismod.
+        </p>
+        <a href="">Join Now</a>
+      </div>
+      <div class="grp100-content1">
+        <img src="/resources/Group 70.png" />
+      </div>
+    </section>
+
+    <!-- group 93 -->
+    <section class="grp93">
+      <div class="grp93-content">
+        <h4><span>Place:</span> New Park Hotel</h4>
+        <h4><span>Date:</span> 31 December Night 2023</h4>
+        <h4><span>Time:</span> Evening 7.30 pm to 12.30 am</h4>
+      </div>
+    </section>
+
+    <!-- Group 48 -->
+    <section class="grp48">
+      <div class="grp48-content1">
+        <h5>NEW BEST OFFER</h5>
+        <h2>Coming Soon</h2>
+        <p>
+          Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+          molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+          euismod.
+        </p>
+      </div>
+      <div class="grp48-content2">
+        <img src="/resources/Ellipse 1.png" />
+      </div>
+      <div class="grp48-content3">
+        <h3>2024</h3>
+        <p>
+          Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.
+        </p>
+        <img src="/resources/Group 96.png" />
+      </div>
+    </section>
+
+    <section class="grp84">
+      <section class="grp82">
+        <h4>WHAT IS FUNCTIONAL</h4>
+        <h1><span>Holidays</span> Sale 50%</h1>
+        <p>
+          Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+          <br />
+          molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+          euismod. Eleifend nunc purus quam id <br />fermentum amet amet sit
+          consectetur.
+        </p>
+      </section>
+      <section class="grp83">
+        <div><img id="singleimg" src="resources/Group 75.png" />"</div>
+        <div id="doubleimg">
+          <img src="resources/Group 44.png" alt="" />
+          <img src="resources/Rectangle 1.png" alt="" />
+        </div>
+      </section>
+    </section>
+
+    <!-- Group 81 -->
+    <section class="grp81">
+      <div class="titles">
+        <h3>THE BEST GIFTS</h3>
+        <h1>Our Awesome Portfolio</h1>
+        <p>
+          Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+          molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+          euismod.
+        </p>
+      </div>
+      <div class="cards">
+        <img src="resources/Rectangle 3.png" />
+        <img src="resources/Rectangle 4.png" />
+        <img src="resources/Rectangle 5.png" />
+        <img src="resources/Rectangle 6.png" />
+        <img src="resources/Rectangle 7.png" />
+        <img src="resources/Rectangle 8.png" />
+      </div>
+    </section>
+
+    <section class="grp65">
+      <img src="/resources/Group 61.png" />
+      <h2>Subscribe Newsletter</h2>
+      <p>
+        Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+        molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.
+      </p>
+      <div class="inputs">
+        <input type="text" placeholder="user@gmail.com" />
+        <button>Subscribe</button>
+      </div>
+    </section>
+
+    <footer>
+      <div class="fitme">
+        <p class="">
+          44, Big Building Roosevelt Street Beach Gardens Florida 33410
+        </p>
+        <div class="">
+          <a href=""
+            ><img class="fico" src="resources/Call.png" /> 123 584 124</a
+          >
+          <a href=""
+            ><img class="fico" src="resources/Website.png" />www.website.com</a
+          >
+        </div>
+      </div>
+      <div class="ftime">
+        <hr />
+        <img src="resources/Facebook.png" />
+        <img src="resources/Instagram.png" />
+        <img src="resources/Twitter.png" />
+        <img src="resources/Linkedin.png" />
+        <hr />
+      </div>
+      <div class="ftime">
+        <p>2017, All Rights Reserved.</p>
+        <p>Unsubscribe</p>
+      </div>
+    </footer>
   </body>
 </html>
